<resources>
    <string name="app_name">Quindio App</string>
    <string name="quindio_colombia">QUINDIO, COLOMBIA!</string>
    <string name="info">Su capital es Armenia. Está ubicado en el centro-oeste del país, en la región andina, limitando al norte con Risaralda, al este con Tolima y al oeste con Valle del Cauca. Con 1845 km² es el segundo departamento menos extenso y con 306 hab/km², el tercero más densamente poblado. Pertenece al eje cafetero y a la región paisa.</string>
    <string name="temp">Temperatura 26°</string>
    <string name="sitios">SITIOS DE INTERES</string>
    <string name="nombre">Panaca</string>
    <string name="descripcion">Nuestro Parque cuenta con un asombroso sendero rodeado de naturaleza, el cual te llevará por 10 espectaculares Estaciones en las que encontrarás más de 4.500 animales con los que podrás jugar, interactuar e incluso alimentar.</string>
    <string name="horario">HORARIO:</string>
    <string name="horario_panaca">MAR - DOM 9:00am - 6:00pm</string>
    <string name="ubicacion">UBICACIÓN:</string>
    <string name="ubicacion_panaca">Quimbaya - Quindio</string>
    <string name="info_panaca">INFO:</string>
    <string name="informacion_panaca">www.panaca.com.co</string>
</resources>